methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:-6: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^MethodsReturning:9: error: type mismatch;
 found   : Unit
 required: Boolean
        return sawBaggle= true
                        ^MethodsReturning:17: error: not found: value seenBaggle
        return seenBaggle
               ^MethodsReturning:16: error: type mismatch;
 found   : Unit
 required: Boolean
      if (sawBaggle){
      ^